--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ to display a list of bluetooth devices displaying an approximation of its distan
             <label>Device Name: </label>
             <input type="text" id="deviceName" placeholder="Device name">
             <label>Only show devices with name: </label>
-            <input type="checkbox" id="devicesWithName" placeholder="Device with name">
+            <input type="checkbox" id="devicesWithName" placeholder="Device with name" checked>
             <button onclick="updateFilters()">Apply Filters</button>
         </div>
         <div class="visualization-container">
